@@ -216,10 +216,10 @@ S3method(makeRLearner,regr.xyf)
 S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.cforest)
 S3method(makeRLearner,surv.coxph)
+S3method(makeRLearner,surv.cv.CoxBoost)
 S3method(makeRLearner,surv.cvglmnet)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
-S3method(makeRLearner,surv.optimCoxBoostPenalty)
 S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeRLearner,surv.ranger)
@@ -381,10 +381,10 @@ S3method(predictLearner,regr.xyf)
 S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.cforest)
 S3method(predictLearner,surv.coxph)
+S3method(predictLearner,surv.cv.CoxBoost)
 S3method(predictLearner,surv.cvglmnet)
 S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
-S3method(predictLearner,surv.optimCoxBoostPenalty)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(predictLearner,surv.ranger)
@@ -594,10 +594,10 @@ S3method(trainLearner,regr.xyf)
 S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.cforest)
 S3method(trainLearner,surv.coxph)
+S3method(trainLearner,surv.cv.CoxBoost)
 S3method(trainLearner,surv.cvglmnet)
 S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
-S3method(trainLearner,surv.optimCoxBoostPenalty)
 S3method(trainLearner,surv.penalized)
 S3method(trainLearner,surv.randomForestSRC)
 S3method(trainLearner,surv.ranger)
