@@ -1,7 +1,7 @@
 context("surv_CoxBoost")
 
 test_that("surv_CoxBoost", {
-  requirePackagesOrSkip(c("!Matrix", "CoxBoost"), default.method = "load")
+  requirePackagesOrSkip(c("!Matrix", "!CoxBoost"), default.method = "load")
 
   parset.list = list(
     list(),
