@@ -5,6 +5,12 @@ mlr_2.9:
 - classif.blackboost, regr.blackboost: made sure that arg "stump" is passed on
   correctly
 
+new learners
+-- surv.cv.CoxBoost
+
+removed learners
+-- surv.optimCoxBoostPenalty
+
 mlr_2.8:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
  "univariate.model.score". The new one also has better defaults.
